force-app/main/default/objects/Facturas__c/fields/C_digo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_Cliente__c</fullName>
    <label>Código de Cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>