force-app/main/default/objects/Facturas__c/fields/Comuna__c.field-meta.xml
<CustomField>
    <fullName>Comuna__c</fullName>
    <label>Comuna</label>
    <type>TextArea</type>
</CustomField>