force-app/main/default/objects/Facturas__c/fields/cuenta_con_venta_activa__c.field-meta.xml
<CustomField>
    <fullName>cuenta_con_venta_activa__c</fullName>
    <formula>AND(
  Total_Venta__c &gt; 0,
  NOT(ISBLANK(Fecha_de_Documento__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cuenta con venta activa</label>
    <type>Checkbox</type>
</CustomField>