force-app/main/default/objects/Facturas__c/fields/Domicilio_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicilio de Cliente</label>
    <referenceTo>Domicilio_de_Cliente__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>