force-app/main/default/objects/Facturas__c/fields/Fecha_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Documento__c</fullName>
    <label>Fecha de Documento</label>
    <type>Date</type>
</CustomField>