force-app/main/default/objects/Facturas__c/fields/Folio_Documento__c.field-meta.xml
<CustomField>
    <fullName>Folio_Documento__c</fullName>
    <externalId>true</externalId>
    <label>Folio Documento</label>
    <length>12</length>
    <type>Text</type>
</CustomField>