force-app/main/default/objects/Facturas__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <formula>CASE(
  MONTH( Fecha_de_Documento__c),
  1, &quot;Enero&quot;,
  2, &quot;Febrero&quot;,
  3, &quot;Marzo&quot;,
  4, &quot;Abril&quot;,
  5, &quot;Mayo&quot;,
  6, &quot;Junio&quot;,
  7, &quot;Julio&quot;,
  8, &quot;Agosto&quot;,
  9, &quot;Septiembre&quot;,
  10, &quot;Octubre&quot;,
  11, &quot;Noviembre&quot;,
  12, &quot;Diciembre&quot;,
  &quot;Desconocido&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes</label>
    <type>Text</type>
</CustomField>