force-app/main/default/objects/Facturas__c/fields/numero_pedido__c.field-meta.xml
<CustomField>
    <fullName>numero_pedido__c</fullName>
    <label>Numero pedido</label>
    <length>10</length>
    <type>Text</type>
</CustomField>