force-app/main/default/objects/Facturas__c/fields/Propietario__c.field-meta.xml
<CustomField>
    <fullName>Propietario__c</fullName>
    <label>Propietario</label>
    <length>5</length>
    <type>Text</type>
</CustomField>