force-app/main/default/objects/Facturas__c/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <label>Sociedad</label>
    <length>40</length>
    <type>Text</type>
</CustomField>