force-app/main/default/objects/Facturas__c/fields/Tipo_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Documento__c</fullName>
    <label>Tipo de Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>