force-app/main/default/objects/Facturas__c/fields/Total_Venta__c.field-meta.xml
<CustomField>
    <fullName>Total_Venta__c</fullName>
    <label>Total Venta</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>