force-app/main/default/objects/Facturas__c/fields/Valor_Rappel__c.field-meta.xml
<CustomField>
    <fullName>Valor_Rappel__c</fullName>
    <label>Valor Rappel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>