force-app/main/default/objects/Facturas__c/fields/Ya_procesada__c.field-meta.xml
<CustomField>
    <fullName>Ya_procesada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ya procesada</label>
    <type>Checkbox</type>
</CustomField>